--- a/styles.css
+++ b/styles.css
@@ -238,17 +238,6 @@ ul:hover {
   color: white;
 }
 
-@media only screen and (max-width: 600px) {
-  .main__description--title {
-    font-size: 30px;
-  }
-
-  .footer {
-    align-items: flex-start;
-    flex-direction: column;
-  }
-}
-
 /**
  * Sign Up page
  *******************************************
@@ -329,12 +318,132 @@ ul:hover {
   margin: 10px 0px;
 }
 
+/**
+ * Login page
+ *******************************************
+ */
+
+.login-page .header {
+  background-color: #21c08b;
+}
+
+.header__logo {
+  margin-left: 30px;
+  width: 200px;
+  height: 61px;
+  background-image: url(/assets/logo-platzi-video.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+}
+
+.login {
+  background-image: linear-gradient(#21c08b, #8f57fd);
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  padding: 0px 30px;
+  min-height: calc(
+    100vh - 200px
+  ); /* El ancho será igual al tamaño de todo el height menos 200px (100px del header + 100px del footer) */
+}
+
+.login__container {
+  background-color: rgba(255, 255, 255, 0.1);
+  border: 2px solid white;
+  border-radius: 40px;
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  min-height: 700px;
+  box-sizing: content-box;
+  padding: 60px 68px 40px;
+  width: 300px;
+}
+
+.login__container--form {
+  display: flex;
+  flex-direction: column;
+}
+
+.login__container--form label {
+  font-size: 14px;
+}
+
+.login__container--remember-me {
+  color: white;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 10px;
+}
+
+.login__container--remember-me a {
+  color: white;
+  font-size: 14px;
+  text-decoration: none;
+}
+
+.login__container--remember-me a:hover {
+  text-decoration: underline;
+}
+
+.login__container--social-media > div {
+  align-items: center;
+  display: flex;
+  font-size: 14px;
+  margin-bottom: 10px;
+}
+
+.login__container--social-media > div > img {
+  margin-right: 10px;
+  width: 30px;
+}
+
+.login__container--register {
+  font-size: 14px;
+}
+
+.login__container--register a {
+  color: white;
+  font-weight: bold;
+  font-size: 16px;
+  text-decoration: none;
+}
+
+.login__container--register a:hover {
+  text-decoration: underline;
+}
+
+/**
+ * Media Queries
+ *******************************************
+ */
 @media only screen and (max-width: 600px) {
+  .main__description--title {
+    font-size: 30px;
+  }
+
   .register__container {
     background-color: transparent;
     border: none;
     box-shadow: none;
     padding: 0px;
     width: 100%;
+  }
+
+  .login__container {
+    background-color: transparent;
+    border: none;
+    box-shadow: none;
+    padding: 0px;
+    width: 100%;
+  }
+
+  .footer {
+    align-items: flex-start;
+    flex-direction: column;
   }
 }
