Reduce CSS complexity

--- a/styles.css
+++ b/styles.css
@@ -12,31 +12,32 @@ body {
   box-sizing: border-box;
 }
 
-input:not([type='submit']):not([type='checkbox']) {
+.input,
+.button {
+  font-family: 'Muli', sans-serif;
+  font-size: 16px;
+  height: 50px;
+}
+
+.input {
   background-color: transparent;
   border-bottom: 2px solid white;
   border-left: 0px;
   border-right: 0px;
   border-top: 0px;
   color: white;
-  font-family: 'Muli', sans-serif;
-  font-size: 16px;
-  height: 50px;
   margin-bottom: 20px;
   outline: none;
   padding: 0px 20px;
 }
 
-input[type='submit'] {
+.button {
   background-color: rgba(255, 255, 255, 0.3);
   border: none;
   border-radius: 25px;
   color: white;
   cursor: pointer;
-  font-size: 16px;
   font-weight: bold;
-  font-family: 'Muli', sans-serif;
-  height: 50px;
   letter-spacing: 1px;
   margin: 10px 0px;
 }
@@ -45,7 +46,7 @@ input[type='submit'] {
   color: white;
 }
 
-header {
+.header {
   align-items: center;
   background: #8f57fd;
   color: white;
@@ -56,7 +57,7 @@ header {
   width: 100%;
 }
 
-.logo {
+.header__logo {
   margin-left: 30px;
   width: 200px;
   height: 61px;
@@ -66,11 +67,11 @@ header {
   background-size: contain;
 }
 
-.menu {
+.header__menu {
   margin-right: 30px;
 }
 
-.menu ul {
+.header__menu ul {
   display: none;
   list-style: none;
   margin: 0px 0px 0px -14px;
@@ -80,31 +81,31 @@ header {
   text-align: right;
 }
 
-.menu:hover ul,
+.header__menu:hover ul,
 ul:hover {
   display: block;
 }
 
-.menu li {
+.header__menu li {
   margin: 10px 0px;
 }
 
-.menu li a {
+.header__menu li a {
   color: white;
   text-decoration: none;
 }
 
-.menu li a:hover {
+.header__menu li a:hover {
   text-decoration: underline;
 }
 
-.menu > div {
+.header__menu--profile {
   align-items: center;
   display: flex;
   cursor: pointer;
 }
 
-.menu > div > img {
+.header__menu--profile > img {
   margin-right: 8px;
   width: 40px;
 }
@@ -118,12 +119,12 @@ ul:hover {
   border-radius: 0px 0px 40px 40px;
 }
 
-.main h2 {
+.main__title {
   color: white;
   font-size: 24px;
 }
 
-body .main .search-input {
+.search-input {
   background-color: rgba(255, 255, 255, 0.1);
   border: 2px solid white;
   border-radius: 25px;
@@ -137,7 +138,7 @@ body .main .search-input {
   width: 70%;
 }
 
-footer {
+.footer {
   align-items: flex-start;
   flex-direction: column;
   background-color: #8f57fd;
@@ -146,7 +147,7 @@ footer {
   width: 100%;
 }
 
-footer a {
+.footer a {
   color: white;
   cursor: pointer;
   font-size: 14px;
@@ -154,7 +155,7 @@ footer a {
   text-decoration: none;
 }
 
-footer a:hover {
+.footer a:hover {
   text-decoration: underline;
 }
 
@@ -162,7 +163,14 @@ footer a:hover {
  * Carousel
  *******************************************
  */
-.carousel-title {
+.carousel {
+  overflow: scroll;
+  padding-left: 30px;
+  width: 100%;
+  position: relative;
+}
+
+.carousel__title {
   background: #8f57fd;
   color: white;
   font-size: 16px;
@@ -172,14 +180,7 @@ footer a:hover {
   width: 100%;
 }
 
-.carousel {
-  overflow: scroll;
-  padding-left: 30px;
-  width: 100%;
-  position: relative;
-}
-
-.carousel > div {
+.carousel__container {
   font-size: 0;
   white-space: nowrap;
   margin: 70px 0px;
@@ -200,7 +201,7 @@ footer a:hover {
   transform-origin: center left;
 }
 /* Change opacity to all items but current */
-.carousel > div:hover .carousel-item:not(:hover) {
+.carousel__container:hover .carousel-item:not(:hover) {
   opacity: 0.3;
 }
 /* Scale up current */
@@ -228,7 +229,7 @@ footer a:hover {
   opacity: 1;
 }
 
-.carousel-item > img {
+.carousel-item__img {
   width: 200px;
   height: 250px;
   object-fit: cover;
@@ -236,7 +237,7 @@ footer a:hover {
   border-radius: 20px;
 }
 
-.carousel-item > div {
+.carousel-item__details {
   overflow: hidden;
   border-radius: 20px;
   align-items: flex-start;
@@ -258,27 +259,26 @@ footer a:hover {
   right: 0;
   top: 0;
 }
-.carousel-item:hover > div {
+.carousel-item:hover > .carousel-item__details {
   opacity: 1;
 }
 
-.carousel-item > div > div a > img {
+.carousel-item__details--img {
   width: 20px;
 }
 
-/* Title */
-.carousel-item > div > p:nth-of-type(1) {
+.carousel-item__details--title {
   color: white;
   margin: 5px 0px 0px 0px;
 }
-/* Subtitle */
-.carousel-item > div > p:nth-of-type(2) {
+
+.carousel-item__details--subtitle {
   color: white;
   font-size: 7px;
   margin: 3px 0px;
 }
-/* Date */
-.carousel-item > div > p:nth-of-type(3) {
+
+.carousel-item__details--date {
   color: white;
   font-size: 6px;
   margin: 0px;
@@ -288,7 +288,7 @@ footer a:hover {
  * Sign Up page
  *******************************************
  */
-.register-page header {
+.header--register {
   background-color: #21c08b;
 }
 
@@ -301,10 +301,10 @@ footer a:hover {
   padding: 0px 30px;
   min-height: calc(
     100vh - 200px
-  ); /* El ancho será igual al tamaño de todo el height menos 200px (100px del header + 100px del footer) */
+  ); /* El ancho será igual al tamaño de todo el height menos 200px (100px del header + 100px del .footer) */
 }
 
-.register > section {
+.register__container {
   color: white;
   display: flex;
   width: 100%;
@@ -314,19 +314,18 @@ footer a:hover {
   box-sizing: content-box;
 }
 
-.register > section > form {
+.register__form {
   display: flex;
   flex-direction: column;
 }
 
-.register > section a {
+.register__container a {
   color: white;
   font-size: 16px;
   text-align: center;
   text-decoration: none;
 }
-
-.register > section a:hover {
+.register__container a:hover {
   text-decoration: underline;
 }
 
@@ -335,7 +334,7 @@ footer a:hover {
  *******************************************
  */
 
-.login-page header {
+.header--login {
   background-color: #21c08b;
 }
 
@@ -348,10 +347,10 @@ footer a:hover {
   padding: 0px 30px;
   min-height: calc(
     100vh - 200px
-  ); /* El ancho será igual al tamaño de todo el height menos 200px (100px del header + 100px del footer) */
+  ); /* El ancho será igual al tamaño de todo el height menos 200px (100px del header + 100px del .footer) */
 }
 
-.login > section {
+.login__container {
   color: white;
   display: flex;
   width: 100%;
@@ -361,55 +360,49 @@ footer a:hover {
   box-sizing: content-box;
 }
 
-.login > section > form {
+.login__form {
   display: flex;
   flex-direction: column;
 }
-
-.login > section > form label {
+.login__form label {
   font-size: 14px;
 }
 
-.login form > input:nth-child(3) + div {
+.login__remember-me {
   color: white;
   display: flex;
   justify-content: space-between;
   margin-top: 10px;
 }
-
-.login form > input:nth-child(3) + div a {
+.login__remember-me a {
   color: white;
   font-size: 14px;
   text-decoration: none;
 }
-
-.login form > input:nth-child(3) + div a:hover {
+.login__remember-me a:hover {
   text-decoration: underline;
 }
 
-.login form + section > div {
+.login__social-media__item {
   align-items: center;
   display: flex;
   font-size: 14px;
   margin-bottom: 10px;
 }
-
-.login form + section > div > img {
+.login__social-media__item > img {
   margin-right: 10px;
   width: 30px;
 }
 
-.login p:nth-last-child(1) {
+.login__register {
   font-size: 14px;
 }
-
-.login p:nth-last-child(1) a {
+.login__register a {
   color: white;
   font-weight: bold;
   font-size: 16px;
   text-decoration: none;
 }
-
-.login p:nth-last-child(1) a:hover {
+.login__register a:hover {
   text-decoration: underline;
 }
