--- a/desktop.css
+++ b/desktop.css
@@ -2,21 +2,12 @@
  * Media Queries
  *******************************************
  */
-.main h2 {
+.main__title {
   font-size: 30px;
 }
 
-.register > section {
-  background-color: rgba(255, 255, 255, 0.1);
-  border: 2px solid white;
-  border-radius: 40px;
-  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
-  color: white;
-  padding: 60px 68px 40px;
-  width: 300px;
-}
-
-.login > section {
+.login__container,
+.register__container {
   background-color: rgba(255, 255, 255, 0.1);
   border: 2px solid white;
   border-radius: 40px;
@@ -25,6 +16,6 @@
   width: 300px;
 }
 
-footer {
+.footer {
   align-items: center;
 }
