Use webfont loader for the font

--- a/styles.css
+++ b/styles.css
@@ -4,8 +4,13 @@
  */
 body {
   margin: 0;
-  font-family: 'Muli', sans-serif;
   background: #8f57fd;
+}
+html {
+  font-family: Helvetica, Ariel, sans-serif;
+}
+html.wf-active {
+  font-family: 'Muli', sans-serif;
 }
 
 * {
