--- a/styles.css
+++ b/styles.css
@@ -104,7 +104,7 @@ ul:hover {
   cursor: pointer;
 }
 
-.header__menu--profile > img {
+.header__menu--profile > svg {
   margin-right: 8px;
   width: 40px;
 }
