Lazy load images with Lozad

--- a/styles.css
+++ b/styles.css
@@ -163,7 +163,8 @@ ul:hover {
  *******************************************
  */
 .carousel {
-  overflow: scroll;
+  overflow-x: scroll;
+  overflow-y: hidden;
   padding-left: 30px;
   width: 100%;
   position: relative;
@@ -180,8 +181,7 @@ ul:hover {
 }
 
 .carousel__container {
-  font-size: 0;
-  white-space: nowrap;
+  display: flex;
   margin: 70px 0px;
   padding-bottom: 25px;
 }
@@ -190,7 +190,6 @@ ul:hover {
   will-change: transform;
   border-radius: 20px;
   position: relative;
-  display: inline-block;
   width: 200px;
   height: 250px;
   margin-right: 10px;
