--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,8 @@
 body {
   margin: 0;
   font-family: 'Muli', sans-serif;
-  background: #8f57fd;
+  background: #21c08b;
+  background-image: linear-gradient(#21c08b, #8f57fd);
 }
 
 * {
@@ -47,7 +48,6 @@ input[type='submit'] {
 
 header {
   align-items: center;
-  background: #8f57fd;
   color: white;
   display: flex;
   height: 100px;
@@ -110,12 +110,16 @@ ul:hover {
 }
 
 .main {
+  color: white;
   display: flex;
-  align-items: center;
-  justify-content: center;
   flex-direction: column;
-  height: 300px;
-  border-radius: 0px 0px 40px 40px;
+  align-items: center;
+  justify-content: space-around;
+  box-sizing: content-box;
+  width: 100%;
+  max-width: 900px;
+  margin: 0 auto;
+  overflow-x: visible;
 }
 
 .main h2 {
@@ -138,19 +142,21 @@ body .main .search-input {
 }
 
 footer {
-  align-items: center;
-  background-color: #8f57fd;
-  display: flex;
-  height: 100px;
-  width: 100%;
+  text-align: center;
+  margin-top: 4rem;
+  margin-bottom: 3rem;
+}
+footer p {
+  margin: 0.5rem;
+  color: #22046f;
+}
+footer i {
+  border-bottom: 1px dashed;
 }
 
 footer a {
-  color: white;
-  cursor: pointer;
-  font-size: 14px;
-  padding-left: 30px;
-  text-decoration: none;
+  color: #22046f;
+  font-weight: bold;
 }
 
 footer a:hover {
@@ -162,11 +168,8 @@ footer a:hover {
  *******************************************
  */
 .carousel-title {
-  background: #8f57fd;
   color: white;
-  font-size: 16px;
-  margin-top: -16px;
-  position: absolute;
+  font-size: 18px;
   padding-left: 30px;
   width: 100%;
 }
@@ -269,168 +272,12 @@ footer a:hover {
 }
 
 /**
- * Sign Up page
- *******************************************
- */
-.register-page header {
-  background-color: #21c08b;
-}
-
-.register {
-  background-image: linear-gradient(#21c08b, #8f57fd);
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  justify-content: center;
-  padding: 0px 30px;
-  min-height: calc(
-    100vh - 200px
-  ); /* El ancho será igual al tamaño de todo el height menos 200px (100px del header + 100px del footer) */
-}
-
-.register > section {
-  background-color: rgba(255, 255, 255, 0.1);
-  border: 2px solid white;
-  border-radius: 40px;
-  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
-  color: white;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  min-height: 600px;
-  box-sizing: content-box;
-  padding: 60px 68px 40px;
-  width: 300px;
-}
-
-.register > section > form {
-  display: flex;
-  flex-direction: column;
-}
-
-.register > section a {
-  color: white;
-  font-size: 16px;
-  text-align: center;
-  text-decoration: none;
-}
-
-.register > section a:hover {
-  text-decoration: underline;
-}
-
-/**
- * Login page
- *******************************************
- */
-
-.login-page header {
-  background-color: #21c08b;
-}
-
-.login {
-  background-image: linear-gradient(#21c08b, #8f57fd);
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  justify-content: center;
-  padding: 0px 30px;
-  min-height: calc(
-    100vh - 200px
-  ); /* El ancho será igual al tamaño de todo el height menos 200px (100px del header + 100px del footer) */
-}
-
-.login > section {
-  background-color: rgba(255, 255, 255, 0.1);
-  border: 2px solid white;
-  border-radius: 40px;
-  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
-  color: white;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  min-height: 700px;
-  box-sizing: content-box;
-  padding: 60px 68px 40px;
-  width: 300px;
-}
-
-.login > section > form {
-  display: flex;
-  flex-direction: column;
-}
-
-.login > section > form label {
-  font-size: 14px;
-}
-
-.login form > input:nth-child(3) + div {
-  color: white;
-  display: flex;
-  justify-content: space-between;
-  margin-top: 10px;
-}
-
-.login form > input:nth-child(3) + div a {
-  color: white;
-  font-size: 14px;
-  text-decoration: none;
-}
-
-.login form > input:nth-child(3) + div a:hover {
-  text-decoration: underline;
-}
-
-.login form + section > div {
-  align-items: center;
-  display: flex;
-  font-size: 14px;
-  margin-bottom: 10px;
-}
-
-.login form + section > div > img {
-  margin-right: 10px;
-  width: 30px;
-}
-
-.login p:nth-last-child(1) {
-  font-size: 14px;
-}
-
-.login p:nth-last-child(1) a {
-  color: white;
-  font-weight: bold;
-  font-size: 16px;
-  text-decoration: none;
-}
-
-.login p:nth-last-child(1) a:hover {
-  text-decoration: underline;
-}
-
-/**
  * Media Queries
  *******************************************
  */
 @media only screen and (max-width: 600px) {
   .main h2 {
     font-size: 24px;
-  }
-
-  .register > section {
-    background-color: transparent;
-    border: none;
-    box-shadow: none;
-    padding: 0px;
-    width: 100%;
-  }
-
-  .login > section {
-    background-color: transparent;
-    border: none;
-    box-shadow: none;
-    padding: 0px;
-    width: 100%;
   }
 
   footer {
